# ffiRPC

./: .gitignore  CMakeLists.txt  O3.sh  README.md  build.sh  cmake_less.sh  commit.sh  ffiRPC_sizedbuf.c  ffiRPC_sizedbuf.h  ffiRPC_struct.c  ffiRPC_struct.h  ffiRPC_thread_context.c  ffiRPC_thread_context.h  rpc_sizedbuf.c  rpc_sizedbuf.h  rpc_struct.c  rpc_struct.h  rpc_thread_context.c  rpc_thread_context.h
hashtable.c/: hashtable.c  hashtable.h
include/: hashtable.h  poll_network.h  ptracker.h  rpc_client.h  rpc_function.h  rpc_init.h  rpc_network.h  rpc_object.h  rpc_object_internal.h  rpc_protocol.h  rpc_server.h  rpc_server_internal.h  rpc_sizedbuf.h  rpc_struct.h  rpc_struct_internal.h  rpc_thread_context.h  sc_queue.h
include/ffirpc/: memory_pool.h  poll_network.h  ptracker.h  rpc_client.h  rpc_config.h  rpc_function.h  rpc_init.h  rpc_network.h  rpc_object.h  rpc_object_internal.h  rpc_server.h  rpc_server_internal.h  rpc_sizedbuf.h  rpc_struct.h  rpc_struct_internal.h  rpc_thread_context.h  sc_queue.h
include/ffirpc/hashmap/: hashmap.h  hashmap_base.h
libs/hashtable/: CMakeLists.txt
libs/hashtable/src/: hashtable.c
src/: hashmap.c  hashtable.c  memory_pool.c  poll_network.c  ptracker.c  rpc_client.c  rpc_function.c  rpc_init.c  rpc_network.c  rpc_object.c  rpc_protocol.c  rpc_server.c  rpc_shell.c  rpc_sizedbuf.c  rpc_struct.c  rpc_thread_context.c
src/C-Thread-Pool/: thpool.c
tests/: CMakeLists.txt  test.c
